--- a/package.json
+++ b/package.json
@@ -9,15 +9,39 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-firebase/app": "^17.3.2",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@reacticons/ionicons": "^6.1.1",
+    "axios": "^1.3.4",
     "expo": "~48.0.5",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.17.2",
+    "ionicons": "^6.1.3",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-dom": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-event-listeners": "^1.0.7",
+    "react-native-ionicons": "^4.6.5",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-paper": "^5.4.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@tsconfig/react-native": "^2.0.3",
+    "@types/jest": "^29.4.0",
     "@types/react": "~18.0.14",
-    "typescript": "^4.9.4"
+    "@types/react-native-vector-icons": "^6.4.13",
+    "@types/react-test-renderer": "^18.0.0",
+    "typescript": "^4.9.5"
   },
   "private": true
 }
